[package]
authors = ["Doug Stephen <dstephen@oxefit.com>"]
edition = "2018"
name = "ccolors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "offline"]}
tokio = {version = "1.6.1", features = ["full"]}
